# Quantum-Leap

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: cross-platform.yml
docs/release-notes/: v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.3.0.md  v1.3.1.md
macOSApp/: Package.swift
macOSApp/iperf3GlassSpeed/: App.swift  ContentView.swift  Models.swift  SSHClient.swift  SpeedTestViewModel.swift
scripts/: build-iperf-linux.sh  build-iperf-windows.ps1  smoke-test-iperf-sidecar.ps1  smoke-test-iperf-sidecar.sh
src/: App.tsx  lucide-direct.d.ts  main.tsx  preview-themes.css  styles.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: i18n.rs  iperf.rs  main.rs  model.rs  saved_server.rs  ssh.rs
src/components/: AppSettings.tsx  ComparisonChart.tsx  DataStreamField.tsx  EnergyLink.tsx  FluidAreaChart.tsx  GlassPanel.tsx  GlassShell.tsx  LocalDeviceGlyph.tsx  MacGlyph.tsx  NumberTicker.tsx  ParticleCanvas.tsx  SpeedWorkbench.test.tsx  SpeedWorkbench.tsx
src/lib/: api.ts  chart.ts  format.ts  i18n.tsx  motion.ts  platform.ts  speed-rating.test.ts  speed-rating.ts  theme.ts  types.ts  ui-behavior.test.ts  version.ts
src/test/: setup.ts
