[package]
name = "iperf3_ui"
version = "1.0.1"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Anti2077/Quantum-Leap"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
